modified the jupiter notebook

--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Congratulations!! You are safe from tumor\n"
+      "Sorry to say that, you have brain tumor\n"
      ]
     }
    ],
    "source": [
-    "image = cv2.imread('D:\\\\Machine Learnings\\\\ML_Projects\\\\brain-tumor-detection-AI\\\\Data\\\\pred\\\\pred35.jpg')\n",
+    "image = cv2.imread('D:\\\\Machine Learnings\\\\ML_Projects\\\\brain-tumor-detection-AI\\\\Data\\\\pred\\\\pred7.jpg')\n",
     "img = Image.fromarray(image)\n",
     "image = img.resize((64,64))\n",
     "image = np.array(image)\n",
